--- a/Azure.html
+++ b/Azure.html
@@ -3,3 +3,13 @@
 <p> check out the destinations that interest you, then check out the homes that feel comfortable to you </p>
 
 <h1> AZURE </h1>
+
+<a href="contries.html">Locations </a>
+
+<style>
+h1{text-align: center;}
+p{
+  background-color: #0098ff;
+  }
+  h1{background-color: #0098ff;}
+</style>
