--- a/contries.html
+++ b/contries.html
@@ -8,7 +8,8 @@ p{
     }
   </style>
 
-  <a href="azure.html">Back to Home Page </a>
+  <a href="Azure.html">Back to Home Page </a>
+
 <p>
 
   <a href="Europe.html">Europe </a>
