Proper HTML structures

--- a/Azure.html
+++ b/Azure.html
@@ -1,3 +1,11 @@
+<!doctype html>
+
+<html>
+
+<header>
+  <title>AZURE</title>
+</header>
+
 <h3> Experience a Staycation Abroad </h3>
 
 <p> check out the destinations that interest you, then check out the homes that feel comfortable to you </p>
