--- a/Europe.html
+++ b/Europe.html
@@ -1,3 +1,9 @@
+<!doctype html>
+<html>
+<header>
+  <title>AZURE</title>
+</header>
+<body>
 <h1> Profile </h1>
 
 <h2>
@@ -18,3 +24,6 @@
 <img src="Spain.jpg"/>
 
 </p>
+
+</body>
+</html>
