--- a/North America.html
+++ b/North America.html
@@ -1,3 +1,12 @@
+<!doctype html>
+
+<html>
+
+<header>
+  <title>AZURE</title>
+</header>
+
+<body>
 <h1> Profile </h1>
 
 <h2>
@@ -18,3 +27,6 @@
 <img src="Texas.jpg"/>
 
 </p>
+
+</body>
+</html>
