--- a/contries.html
+++ b/contries.html
@@ -1,3 +1,13 @@
+<!doctype html>
+
+<html>
+
+<header>
+  <title>AZURE</title>
+</header>
+
+<body>
+
 <h1> Regions </h1>
 
 
@@ -23,3 +33,7 @@ p{
 <p>
   <a href="South America.html">South America </a>
 </p>
+
+</body>
+
+</html>
