--- a/South America.html
+++ b/South America.html
@@ -1,3 +1,14 @@
+
+<!DOCTYPE html>
+
+<html>
+<head>
+  <title>Azure</title>
+
+</head>
+
+<body>
+
 <h1> Profile </h1>
 
 <h2>
@@ -18,3 +29,7 @@
 <img src="Peru.jpg"/>
 
 </p>
+
+</body>
+
+</html>
